[package]
name = "svcutil"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "MIT"
description = "Package for creating rust code for consuming a soap API from a C# SVC"
homepage = "https://github.com/rlkandela/svcutil"
repository = "https://github.com/rlkandela/svcutil"
readme = "README.md"

[dependencies]
